@@ -9,6 +9,7 @@ This file documents the major additions and syntax changes between releases.
 	Fixed check_disk disk usage calculation when using --group=NAME (related to bug #1348746)
 	Fix help text of check_ntp* (Bug #1880095)
 	Fix bugs and flaws in best offset server selection of check_ntp_time and (deprecated) check_ntp
+	check_ntp_peer now checks for the LI_ALARM flag
 
 1.4.11 13th December 2007
 	Fixed check_http regression in 1.4.10 where following redirects to
